k8s-deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackdb-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hackdb-redis
  template:
    metadata:
      labels:
        app: hackdb-redis
    spec:
      containers:
      - name: redis
        image: redis:7
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: hackdb-redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: hackdb-redis
